[package]
name = "solana-farm-router-valhalla"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
debug = []


[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
solana-program = "1.9.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
